# Computer-Automation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pilot/: __init__.py  __main__.py  agent.py  browser.py  cli.py  config.py  dom_summary.js  output.py  perception.py  recipes.py  runner.py  schemas.py  server.py  tasks.py
pilot/ml/: __init__.py  datasets.py  engine.py  orchestrator.py  planner.py  spec.py  workspace.py
pilot/ml/rl/: __init__.py  agent.py  capture.py  dqn.py  env.py  reward.py  runner.py  spd.py  spd_campaign.py  spd_deploy.py  spd_real.py  spd_real_train.py  spd_sim.py  spd_train.py  train.py
pilot/providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py  stub.py
pilot/web/: app.js  index.html  style.css
recipes/: books-demo.json
tasks/: jobs_gather.json  price_compare_books.json  steam_wishlist.json
tests/: conftest.py  test_approval_gating.py  test_dom_summary.py  test_dqn.py  test_e2e_stub.py  test_local_provider.py  test_ml.py  test_ml_rl.py  test_recipe_replay.py  test_server.py  test_spd.py  test_spd_campaign.py  test_spd_deploy.py  test_spd_real.py  test_spd_sim.py  test_templates.py  test_vision_fallback.py
tests/fixtures/: books.html  books_summary.snapshot.txt  canvas.html
