[project]
name = "pilot"
version = "0.1.0"
description = "Pilot — a personal, local browser-automation agent that acts on your behalf in your own logged-in browser session."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pilot" }]
dependencies = [
    "playwright>=1.44",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Real model providers are optional: the core loop + smoke tests run with the
# built-in StubProvider and need no API keys.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pilot = "pilot.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
